WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
80044
Assertion failure in pageContainsAnyHorizontalScrollbars() (scrollableArea->isOnActivePage()) when leaving pages with embedded PDFs
https://bugs.webkit.org/show_bug.cgi?id=80044
Summary
Assertion failure in pageContainsAnyHorizontalScrollbars() (scrollableArea->i...
Anders Carlsson
Reported
2012-03-01 13:16:37 PST
Assertion failure in pageContainsAnyHorizontalScrollbars() (scrollableArea->isOnActivePage()) when leaving pages with embedded PDFs
Attachments
Patch
(4.24 KB, patch)
2012-03-01 13:21 PST
,
Anders Carlsson
beidson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-03-01 13:21:27 PST
Created
attachment 129736
[details]
Patch
Anders Carlsson
Comment 2
2012-03-01 13:27:02 PST
Committed
r109405
: <
http://trac.webkit.org/changeset/109405
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug