Assertion failure in pageContainsAnyHorizontalScrollbars() (scrollableArea->isOnActivePage()) when leaving pages with embedded PDFs https://bugs.webkit.org/show_bug.cgi?id=80044 <rdar://problem/10919940>

Reviewed by Brady Eidson.

Remove the code that would add and remove wheel event handlers since that's not what we want to track.
Instead, dynamically add and remove the view as its scrollbars come and go.

* WebProcess/Plugins/PDF/BuiltInPDFView.cpp:
(WebKit::BuiltInPDFView::updateScrollbars):
(WebKit::BuiltInPDFView::initialize):
* WebProcess/Plugins/PDF/BuiltInPDFView.h:
(BuiltInPDFView):

Canonical link: https://commits.webkit.org/97120@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109405 268f45cc-cd09-0410-ab3c-d52691b4dbfc